--- a/kubetool/resources/configurations/globals.yaml
+++ b/kubetool/resources/configurations/globals.yaml
@@ -1,4 +1,12 @@
 kubernetes_versions:
+  v1.16:
+    supported: false
+  v1.17:
+    supported: false
+  v1.18:
+    supported: false
+  v1.19:
+    supported: false
   v1.20:
     supported: true
   v1.21:
@@ -31,7 +39,7 @@ etcd:
     peer_key: /etc/kubernetes/pki/etcd/peer.key
     peer_cacert: /etc/kubernetes/pki/etcd/ca.crt
   temporary_exceptions:
-    - "etcdserver: leader changed"
+    - leader changed
     - "etcdserver: request timed out"
 kubernetes:
   temporary_exceptions:
@@ -96,6 +104,23 @@ workaround:
 compatibility_map:
   software:
     docker:
+      v1.18.4:
+        version_rhel: 19.03*
+        version_debian: 5:19.03.*
+      v1.18.8:
+        version_rhel: 19.03*
+        version_debian: 5:19.03.*
+      v1.18.10:
+        version_rhel: 19.03*
+        version_debian: 5:19.03.*
+      v1.18.18:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:19.03.*
+      v1.19.3:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:19.03.*
       v1.20.2:
         version_rhel: 19.03*
         version_rhel8: 19.03*
@@ -109,6 +134,23 @@ compatibility_map:
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
     containerd:
+      v1.18.4:
+        version_rhel: 1.4.6*
+        version_debian: 1.4.6*
+      v1.18.8:
+        version_rhel: 1.4.6*
+        version_debian: 1.4.6*
+      v1.18.10:
+        version_rhel: 1.4.6*
+        version_debian: 1.4.6*
+      v1.18.18:
+        version_rhel: 1.4.6*
+        version_rhel8: 1.4.8*
+        version_debian: 1.4.6*
+      v1.19.3:
+        version_rhel: 1.4.6*
+        version_rhel8: 1.4.8*
+        version_debian: 1.4.6*
       v1.20.2:
         version_rhel: 1.4.6*
         version_rhel8: 1.4.8*
@@ -122,6 +164,23 @@ compatibility_map:
         version_rhel8: 1.4.8*
         version_debian: 1.4.6*
     podman:
+      v1.18.4:
+        version_rhel: 1.6.4*
+        version_debian: 100:3.1.2*
+      v1.18.8:
+        version_rhel: 1.6.4*
+        version_debian: 100:3.1.2*
+      v1.18.10:
+        version_rhel: 1.6.4*
+        version_debian: 100:3.1.2*
+      v1.18.18:
+        version_rhel: 1.6.4*
+        version_rhel8: 3.0.1*
+        version_debian: 100:3.1.2*
+      v1.19.3:
+        version_rhel: 1.6.4*
+        version_rhel8: 3.0.1*
+        version_debian: 100:3.1.2*
       v1.20.2:
         version_rhel: 1.6.4*
         version_rhel8: 3.0.1*
@@ -135,6 +194,23 @@ compatibility_map:
         version_rhel8: 3.0.1*
         version_debian: 100:3.1.2*
     haproxy:
+      v1.18.4:
+        version_rhel: 1.8*
+        version_debian: 2.0.*
+      v1.18.8:
+        version_rhel: 1.8*
+        version_debian: 2.0.*
+      v1.18.10:
+        version_rhel: 1.8*
+        version_debian: 2.0.*
+      v1.18.18:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.0.*
+      v1.19.3:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.0.*
       v1.20.2:
         version_rhel: 1.8*
         version_rhel8: 1.8*
@@ -148,19 +224,51 @@ compatibility_map:
         version_rhel8: 1.8*
         version_debian: 2.0.*
     keepalived:
+      v1.18.4:
+        version_rhel: 1.3*
+        version_debian: 1:2.0.*
+      v1.18.8:
+        version_rhel: 1.3*
+        version_debian: 1:2.0.*
+      v1.18.10:
+        version_rhel: 1.3*
+        version_debian: 1:2.0.*
+      v1.18.18:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.0.*
+      v1.19.3:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.0.*
       v1.20.2:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
       v1.21.2:
-        version_rhel: 1.3*
-        version_rhel8: 2.1*
-        version_debian: 1:2.0.*
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.0.*
       v1.22.2:
-        version_rhel: 1.3*
-        version_rhel8: 2.1*
-        version_debian: 1:2.0.*
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.0.*
     crictl:
+      v1.18.4:
+        version: v1.20.0
+        sha1: eaf4ffa1cfac5c69ec522d9562c8ee6ddd873f3e
+      v1.18.8:
+        version: v1.20.0
+        sha1: eaf4ffa1cfac5c69ec522d9562c8ee6ddd873f3e
+      v1.18.10:
+        version: v1.20.0
+        sha1: eaf4ffa1cfac5c69ec522d9562c8ee6ddd873f3e
+      v1.18.18:
+        version: v1.20.0
+        sha1: eaf4ffa1cfac5c69ec522d9562c8ee6ddd873f3e
+      v1.19.3:
+        version: v1.20.0
+        sha1: eaf4ffa1cfac5c69ec522d9562c8ee6ddd873f3e
       v1.20.2:
         version: v1.20.0
         sha1: eaf4ffa1cfac5c69ec522d9562c8ee6ddd873f3e
@@ -171,6 +279,16 @@ compatibility_map:
         version: v1.22.0
         sha1: b840ddd1a8a35b12fd22d2657c7d17cb2f6f2e05
     kubeadm:
+      v1.18.4:
+        sha1: d17b585fe64fcb0bd21fad724a9f899d214e665f
+      v1.18.8:
+        sha1: f99912e8cf617f75011aa930078397115940dd7e
+      v1.18.10:
+        sha1: 9b4163970ea1236091927a528079e823e1f09843
+      v1.18.18:
+        sha1: fd7cc264070a71834bafbb39838ee24d26c5f0c5
+      v1.19.3:
+        sha1: 0db8a6e2493b8956259ea2d5f2d431cf5d38d971
       v1.20.2:
         sha1: 4c025ebf29eb7aa32012a1c8f81e7b85df2bf92f
       v1.21.2:
@@ -178,6 +296,16 @@ compatibility_map:
       v1.22.2:
         sha1: 190703cfe16ad00d0f91487d00bece9667cd5903
     kubelet:
+      v1.18.4:
+        sha1: 5ca1b807bf7a4a8c8737c57437354cf7299eaa90
+      v1.18.8:
+        sha1: d77df7122b0669f152aa141bb839c34fc070c71f
+      v1.18.10:
+        sha1: 26bc249f9ac38a6ceb202a54e2cc1281bea41e5d
+      v1.18.18:
+        sha1: f8d0ba8941176cd7f9b263b3f533a0fd5ab17a2d
+      v1.19.3:
+        sha1: 4c6ff5ffa4b2e6f3f886f319c977c57905186f72
       v1.20.2:
         sha1: 25ca655cce261cdbeb7c3337185f669ee0b53cc3
       v1.21.2:
@@ -185,6 +313,16 @@ compatibility_map:
       v1.22.2:
         sha1: 41a2980963427a17c4fbce74aee6bb0bcf08b9ff
     kubectl:
+      v1.18.4:
+        sha1: 1351db2b0b92bb0c46d6e18eda7b3063e7e044bf
+      v1.18.8:
+        sha1: 74c282c9d8b7e4c59250f4775bff388eaa596878
+      v1.18.10:
+        sha1: 6bcc1d8434e4eba2680ee7399acaea5ad1008629
+      v1.18.18:
+        sha1: 6bcbf6f2cb7998e736d177bbd1f95f1305921d6c
+      v1.19.3:
+        sha1: 8790862689bd3b022ba012228c1734316c968d6a
       v1.20.2:
         sha1: 202e00c35fa2a4085135061e5d0965ebbffed19c
       v1.21.2:
@@ -192,6 +330,12 @@ compatibility_map:
       v1.22.2:
         sha1: de9b5c2fe2faefc2b4a61adf6f89144d3f0a09b1
     calico:
+      v1.18:
+        version: v3.16.1
+        sha1: 04a53f7bc08d7cb488a9939144ee5bfd606c6fff
+      v1.19:
+        version: v3.16.1
+        sha1: 04a53f7bc08d7cb488a9939144ee5bfd606c6fff
       v1.20:
         version: v3.19.1
         sha1: dde3851a977280f7c0d54538526bb9459fa7a7ac
@@ -199,32 +343,50 @@ compatibility_map:
         version: v3.19.1
         sha1: dde3851a977280f7c0d54538526bb9459fa7a7ac
       v1.22:
-        version: v3.20.1
-        sha1: 4c5aec4da45c6ce45e03df2f36abb0010909b7db
+        version: v3.19.1
+        sha1: dde3851a977280f7c0d54538526bb9459fa7a7ac
     nginx-ingress-controller:
+      v1.18:
+        image-name: k8s-artifacts-prod/ingress-nginx/controller
+        version: v0.34.1
+        pod-name: ingress-nginx-controller
+      v1.19:
+        image-name: k8s.gcr.io/ingress-nginx/controller
+        version: v0.35.0
+        pod-name: ingress-nginx-controller
       v1.20:
-        image-name: ingress-nginx/controller
-        version: v1.0.3
+        image-name: k8s.gcr.io/ingress-nginx/controller
+        version: v0.43.0
         pod-name: ingress-nginx-controller
       v1.21:
-        image-name: ingress-nginx/controller
-        version: v1.0.3
+        image-name: k8s.gcr.io/ingress-nginx/controller
+        version: v0.48.1
         pod-name: ingress-nginx-controller
       v1.22:
-        image-name: ingress-nginx/controller
-        version: v1.0.3
+        image-name: k8s.gcr.io/ingress-nginx/controller
+        version: v0.48.1
         pod-name: ingress-nginx-controller
     kubernetes-dashboard:
+      v1.18:
+        version: v2.0.1
+        metrics-scraper-version: v1.0.4
+      v1.19:
+        version: v2.0.4
+        metrics-scraper-version: v1.0.4
       v1.20:
-        version: v2.4.0
-        metrics-scraper-version: v1.0.7
+        version: v2.1.0
+        metrics-scraper-version: v1.0.6
       v1.21:
-        version: v2.4.0
-        metrics-scraper-version: v1.0.7
+        version: v2.3.1
+        metrics-scraper-version: v1.0.6
       v1.22:
-        version: v2.4.0
-        metrics-scraper-version: v1.0.7
+        version: v2.3.1
+        metrics-scraper-version: v1.0.6
     local-path-provisioner:
+      v1.18:
+        version: v0.0.19
+      v1.19:
+        version: v0.0.19
       v1.20:
         version: v0.0.19
       v1.21:
