Fix and support new nginx version in Kubernetes 1.22 version

--- a/kubetool/resources/configurations/defaults.yaml
+++ b/kubetool/resources/configurations/defaults.yaml
@@ -481,6 +481,7 @@ plugins:
         annotations:
           nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       spec:
+        ingressClassName: nginx
         tls:
           # this section enables tls and ssl-redirect for dashboard
           # since certificate is not provided here, default controller certificate will be used
@@ -491,9 +492,12 @@ plugins:
             http:
               paths:
                 - path: /
+                  pathType: Prefix
                   backend:
-                    serviceName: kubernetes-dashboard
-                    servicePort: 443
+                    service:
+                      name: kubernetes-dashboard
+                      port:
+                        number: 443
 
   local-path-provisioner:
     install: false
