MANOPD-68687 Fix invalid doc links and correct TODO descriptions

--- a/kubetool/resources/configurations/defaults.yaml
+++ b/kubetool/resources/configurations/defaults.yaml
@@ -428,7 +428,7 @@ plugins:
         hostPort: 443
         protocol: TCP
 
-  # todo: support hostPort for haproxy-ingress
+  # TODO: support hostPort for haproxy-ingress
   haproxy-ingress-controller:
     install: false
     installation:
