--- a/kubetool/resources/configurations/globals.yaml
+++ b/kubetool/resources/configurations/globals.yaml
@@ -238,15 +238,15 @@ compatibility_map:
         version: v0.35.0
         pod-name: ingress-nginx-controller
       v1.20:
-        image-name: k8s.gcr.io/ingress-nginx/controller
+        image-name: ingress-nginx/controller
         version: v1.0.3
         pod-name: ingress-nginx-controller
       v1.21:
-        image-name: k8s.gcr.io/ingress-nginx/controller
+        image-name: ingress-nginx/controller
         version: v1.0.3
         pod-name: ingress-nginx-controller
       v1.22:
-        image-name: k8s.gcr.io/ingress-nginx/controller
+        image-name: ingress-nginx/controller
         version: v1.0.3
         pod-name: ingress-nginx-controller
     kubernetes-dashboard:
