Update Installation.md add Kubernetes Versions v1.21.5 & v1.20.11 Update sha1 sum

--- a/kubetool/resources/configurations/globals.yaml
+++ b/kubetool/resources/configurations/globals.yaml
@@ -31,7 +31,7 @@ etcd:
     peer_key: /etc/kubernetes/pki/etcd/peer.key
     peer_cacert: /etc/kubernetes/pki/etcd/ca.crt
   temporary_exceptions:
-    - leader changed
+    - "etcdserver: leader changed"
     - "etcdserver: request timed out"
 kubernetes:
   temporary_exceptions:
