--- a/kubetool/resources/configurations/defaults.yaml
+++ b/kubetool/resources/configurations/defaults.yaml
@@ -90,7 +90,7 @@ services:
       plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc:
         runtime_type: "io.containerd.runc.v2"
       plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options:
-        SystemdCgroup: true
+        SystemdCgroup: '{% if services.kubeadm_kubelet.cgroupDriver == "systemd" %}true{% else %}False{% endif %}'
     dockerConfig:
       ipv6: False
       log-driver: json-file
