MANOPD-69670 Revert removed supported kubernetes versions in globals

--- a/kubetool/resources/configurations/globals.yaml
+++ b/kubetool/resources/configurations/globals.yaml
@@ -96,7 +96,15 @@ workaround:
 compatibility_map:
   software:
     docker:
+      v1.20.2:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:19.03.*
       v1.20.11:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:19.03.*
+      v1.21.2:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
@@ -109,7 +117,15 @@ compatibility_map:
         version_rhel8: 19.03*
         version_debian: 5:19.03.*
     containerd:
+      v1.20.2:
+        version_rhel: 1.4.6*
+        version_rhel8: 1.4.8*
+        version_debian: 1.4.6*
       v1.20.11:
+        version_rhel: 1.4.6*
+        version_rhel8: 1.4.8*
+        version_debian: 1.4.6*
+      v1.21.2:
         version_rhel: 1.4.6*
         version_rhel8: 1.4.8*
         version_debian: 1.4.6*
@@ -122,7 +138,15 @@ compatibility_map:
         version_rhel8: 1.4.8*
         version_debian: 1.4.6*
     podman:
+      v1.20.2:
+        version_rhel: 1.6.4*
+        version_rhel8: 3.0.1*
+        version_debian: 100:3.1.2*
       v1.20.11:
+        version_rhel: 1.6.4*
+        version_rhel8: 3.0.1*
+        version_debian: 100:3.1.2*
+      v1.21.2:
         version_rhel: 1.6.4*
         version_rhel8: 3.0.1*
         version_debian: 100:3.1.2*
@@ -135,7 +159,15 @@ compatibility_map:
         version_rhel8: 3.0.1*
         version_debian: 100:3.1.2*
     haproxy:
+      v1.20.2:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.0.*
       v1.20.11:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.0.*
+      v1.21.2:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.0.*
@@ -148,7 +180,15 @@ compatibility_map:
         version_rhel8: 1.8*
         version_debian: 2.0.*
     keepalived:
+      v1.20.2:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.0.*
       v1.20.11:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.0.*
+      v1.21.2:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
@@ -161,7 +201,13 @@ compatibility_map:
         version_rhel8: 2.1*
         version_debian: 1:2.0.*
     crictl:
+      v1.20.2:
+        version: v1.20.0
+        sha1: eaf4ffa1cfac5c69ec522d9562c8ee6ddd873f3e
       v1.20.11:
+        version: v1.20.0
+        sha1: eaf4ffa1cfac5c69ec522d9562c8ee6ddd873f3e
+      v1.21.2:
         version: v1.20.0
         sha1: eaf4ffa1cfac5c69ec522d9562c8ee6ddd873f3e
       v1.21.5:
@@ -171,22 +217,34 @@ compatibility_map:
         version: v1.22.0
         sha1: b840ddd1a8a35b12fd22d2657c7d17cb2f6f2e05
     kubeadm:
+      v1.20.2:
+        sha1: 4c025ebf29eb7aa32012a1c8f81e7b85df2bf92f
       v1.20.11:
         sha1: 59f904f50ea10cbc69007891301a2169f42f3537
+      v1.21.2:
+        sha1: cbb07d380de4ef73d43d594a1055839fa9753138
       v1.21.5:
         sha1: 2ee056ac1d0b9c2289bdb03cb7bb0cd21ee29a8b
       v1.22.2:
         sha1: 190703cfe16ad00d0f91487d00bece9667cd5903
     kubelet:
+      v1.20.2:
+        sha1: 25ca655cce261cdbeb7c3337185f669ee0b53cc3
       v1.20.11:
         sha1: 00c0b6a8dda55616343baafee9e9aa2775bc3c22
+      v1.21.2:
+        sha1: 024e458aa0f74cba6b773401b779590437812fc6
       v1.21.5:
         sha1: 61da22475b977cb678cca8cf7249bf727d72ee89
       v1.22.2:
         sha1: 41a2980963427a17c4fbce74aee6bb0bcf08b9ff
     kubectl:
+      v1.20.2:
+        sha1: 202e00c35fa2a4085135061e5d0965ebbffed19c
       v1.20.11:
         sha1: 0feee9301e7f6cb6fba1d841a6fd8f378589145f
+      v1.21.2:
+        sha1: 2c7a7de9fff41ac49f7c2546a9b1aff2c1d9c468
       v1.21.5:
         sha1: c4648e31ca16fb00e3826f8ab7c653da81eff367
       v1.22.2:
