--- a/kubetool/resources/configurations/defaults.yaml
+++ b/kubetool/resources/configurations/defaults.yaml
@@ -13,6 +13,7 @@ services:
     readOnlyPort: 0
     protectKernelDefaults: true
     podPidsLimit: 4096
+    cgroupDriver: systemd
   kubeadm:
     apiVersion: kubeadm.k8s.io/v1beta2
     kind: ClusterConfiguration
@@ -89,7 +90,7 @@ services:
       plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc:
         runtime_type: "io.containerd.runc.v2"
       plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options:
-        SystemdCgroup: true
+        SystemdCgroup: '{% if services.kubeadm_kubelet.cgroupDriver == "systemd" %}true{% else %}false{% endif %}'
     dockerConfig:
       ipv6: False
       log-driver: json-file
