MANOPD-70171 Add license auto-updation tool

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,9 +1,21 @@
-name: Unit Tests
+name: Tests and Validations
 on:
   push:
     branches:
       - '**'
+env:
+  COPYRIGHT_COMPANY: 'NetCracker Technology Corporation'
+  COPYRIGHT_YEAR: '2021'
 jobs:
+  license:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: docker run -v "${PWD}:/src" -i ghcr.io/google/addlicense -v -c "${{ env.COPYRIGHT_COMPANY }}" -y "${{ env.COPYRIGHT_YEAR }}" **/*.*
+      - run: cat kubetool/core/cluster.py
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Auto-update license file
   unit-tests:
     runs-on: ubuntu-latest
     steps:
