--- a/kubetool/resources/configurations/defaults.yaml
+++ b/kubetool/resources/configurations/defaults.yaml
@@ -432,6 +432,10 @@ plugins:
         containerPort: 443
         hostPort: 443
         protocol: TCP
+      - name: prometheus
+        containerPort: 10254
+        hostport: 10254
+        protocol: TCP
 
   # TODO: support hostPort for haproxy-ingress
   haproxy-ingress-controller:
