--- a/kubetool/resources/configurations/globals.yaml
+++ b/kubetool/resources/configurations/globals.yaml
@@ -34,6 +34,7 @@ etcd:
     - "etcdserver: leader changed"
     - "etcdserver: request timed out"
   health:
+    init_timeout: 30
     timeout: 2
     retries: 20
 kubernetes:
