[MANOPD-68706] Check etcd health during migrate_cri procedure (#32)
* Initial commit

* etcd health check

* rebase artifacts

* PR correction

* etcd leader check

* etcd leader check

Co-authored-by: Leonid Fedotov <3584432+iLeonidze@users.noreply.github.com>

--- a/kubetool/resources/configurations/globals.yaml
+++ b/kubetool/resources/configurations/globals.yaml
@@ -33,6 +33,10 @@ etcd:
   temporary_exceptions:
     - "etcdserver: leader changed"
     - "etcdserver: request timed out"
+  health:
+    init_timeout: 30
+    timeout: 2
+    retries: 20
 kubernetes:
   temporary_exceptions:
     - has prevented the request from succeeding
