[MANOPD-70169] Automatic port opening for prometeus (#51)
* Fix modprobe

* open ports Prometheus

* Update Installation.md

Co-authored-by: koryaga <5212888+koryaga@users.noreply.github.com>

--- a/kubetool/resources/configurations/defaults.yaml
+++ b/kubetool/resources/configurations/defaults.yaml
@@ -432,6 +432,9 @@ plugins:
         containerPort: 443
         hostPort: 443
         protocol: TCP
+      - name: prometheus
+        containerPort: 10254
+        protocol: TCP
 
   # TODO: support hostPort for haproxy-ingress
   haproxy-ingress-controller:
