--- a/kubetool/resources/configurations/globals.yaml
+++ b/kubetool/resources/configurations/globals.yaml
@@ -144,24 +144,24 @@ compatibility_map:
     podman:
       v1.20.2:
         version_rhel: 1.6.4*
-        version_rhel8: 3.0.1*
-        version_debian: 100:3.1.2*
+        version_rhel8: "*"
+        version_debian: "*"
       v1.20.11:
         version_rhel: 1.6.4*
-        version_rhel8: 3.0.1*
-        version_debian: 100:3.1.2*
+        version_rhel8: "*"
+        version_debian: "*"
       v1.21.2:
         version_rhel: 1.6.4*
-        version_rhel8: 3.0.1*
-        version_debian: 100:3.1.2*
+        version_rhel8: "*"
+        version_debian: "*"
       v1.21.5:
         version_rhel: 1.6.4*
-        version_rhel8: 3.0.1*
-        version_debian: 100:3.1.2*
+        version_rhel8: "*"
+        version_debian: "*"
       v1.22.2:
         version_rhel: 1.6.4*
-        version_rhel8: 3.0.1*
-        version_debian: 100:3.1.2*
+        version_rhel8: "*"
+        version_debian: "*"
     haproxy:
       v1.20.2:
         version_rhel: 1.8*
@@ -265,15 +265,15 @@ compatibility_map:
         sha1: 4c5aec4da45c6ce45e03df2f36abb0010909b7db
     nginx-ingress-controller:
       v1.20:
-        image-name: ingress-nginx/controller
+        image-name: k8s.gcr.io/ingress-nginx/controller
         version: v1.0.3
         pod-name: ingress-nginx-controller
       v1.21:
-        image-name: ingress-nginx/controller
+        image-name: k8s.gcr.io/ingress-nginx/controller
         version: v1.0.3
         pod-name: ingress-nginx-controller
       v1.22:
-        image-name: ingress-nginx/controller
+        image-name: k8s.gcr.io/ingress-nginx/controller
         version: v1.0.3
         pod-name: ingress-nginx-controller
     kubernetes-dashboard:
