--- a/examples/cluster.yaml/allinone-cluster-ol7.yaml
+++ b/examples/cluster.yaml/allinone-cluster-ol7.yaml
@@ -28,7 +28,7 @@ services:
           
   packages:
     package_manager:
-      replace-repositories: true
+      replace-repositories: false
       repositories:
       # Own OL7 repositories need to be described in cluster.yaml, if they are disabled in OS. 
         ol7_addons:
