--- a/kubetool/resources/configurations/globals.yaml
+++ b/kubetool/resources/configurations/globals.yaml
@@ -265,15 +265,15 @@ compatibility_map:
         sha1: 4c5aec4da45c6ce45e03df2f36abb0010909b7db
     nginx-ingress-controller:
       v1.20:
-        image-name: k8s.gcr.io/ingress-nginx/controller
+        image-name: ingress-nginx/controller
         version: v1.0.3
         pod-name: ingress-nginx-controller
       v1.21:
-        image-name: k8s.gcr.io/ingress-nginx/controller
+        image-name: ingress-nginx/controller
         version: v1.0.3
         pod-name: ingress-nginx-controller
       v1.22:
-        image-name: k8s.gcr.io/ingress-nginx/controller
+        image-name: ingress-nginx/controller
         version: v1.0.3
         pod-name: ingress-nginx-controller
     kubernetes-dashboard:
