--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,8 +5,9 @@ on:
   push:
     branches:
       - 'main'
+      - 'rebranding'
 env:
-  TAG_NAME: ${{ github.event.release.tag_name || (github.ref == 'refs/heads/main' && 'main') }}
+  TAG_NAME: ${{ github.event.release.tag_name || (github.ref == 'refs/heads/main' && 'main') || 'rebranding' }}
 jobs:
   publish-docker:
     runs-on: ubuntu-latest
