--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -5,7 +5,7 @@ on:
       - '**'
 env:
    COPYRIGHT_COMPANY: 'NetCracker Technology Corporation'
-   COPYRIGHT_YEAR: '2021'
+   COPYRIGHT_YEAR: '2021-2022'
 jobs:
   license:
      runs-on: ubuntu-latest
